[project]
name = "db-to-bq-dlt-img"
version = "0.1.0"
description = "Transfert de données DB (Postgres/Oracle) vers BigQuery avec dlt"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "dlt[bigquery,postgres,sql-database]>=1.18.2",
    "oracledb>=2.5.0",
    "dotenv>=0.9.9",
    "google-cloud-logging>=3.11.0",
    "google-cloud-bigquery-storage>=2.26.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]
